force-app/main/default/objects/Botox_Dysport__c/fields/Botox_Dysport_Procedure_Reconstituted__c.field-meta.xml
<CustomField>
    <fullName>Botox_Dysport_Procedure_Reconstituted__c</fullName>
    <description>Botox/Dysport Procedure Reconstituted per 100U</description>
    <label>Botox/Dysport Procedure Reconstituted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.2ml</fullName>
            </value>
            <value>
                <fullName>1.1ml</fullName>
            </value>
            <value>
                <fullName>6 ml BSW and 2ml 2% lido</fullName>
            </value>
            <value>
                <fullName>14ml BSW and 2ml 2% lido</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>