force-app/main/default/objects/Botox_Dysport__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Botox/Dysport</relationshipLabel>
    <relationshipName>Botox_Dysport</relationshipName>
    <type>Lookup</type>
</CustomField>